--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -71,7 +71,7 @@
         <div class="toggle-item">
             <p>ДЕТАЛЕН ОПИС</p> <i class="fa-solid fa-angle-down toggle-icon"></i>
             <div class="toggle-content main-toggle">
-                <p>{{  product.desc2| safe }}</p>
+                <p>{{  product.content| safe }}</p>
             </div>
         </div>
     </div>
