--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -11,11 +11,11 @@
     {% else %}
         <title>Почетна</title>
     {% endif %}
-    <link rel="stylesheet" href="{% static 'shop/css/main.css' %}">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400;1,600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/9ba2862283.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href=" {% static 'shop/css/main.css' %} ">
     
 </head>
 <body>
