--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -11,26 +11,6 @@
                 <button data-product={{ product.id }} data-action="add" class="add-to-cart update-cart">ВО КОШНИЧКА</button>
             </div>
         {% endfor %}
-        {% if is_paginated %}
-            <div class="pagination">
-            {% if page_obj.has_previous %}
-                <a class="page-numbers" href="?page={{ page_obj.previous_page_number }}"><i class="fa-solid fa-arrow-left-long"></i></a>
-            {% endif %}
-
-            {% for num in page_obj.paginator.page_range %}
-                {% if page_obj.number == num %}
-                    <a class="page-numbers page-active" href="?page={{ num }}">{{ num }}</a>
-                {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                    <a class="page-numbers"href="?page={{ num }}">{{ num }}</a>
-                {% endif %}
-
-            {% endfor %}
-
-            {% if page_obj.next %}
-                <a class="page-numbers" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-                <a class="page-numbers" href="?page={{ page_obj.next_page_number }}"><i class="fa-solid fa-arrow-right-long"></i></a>
-            {% endif %}
-            </div>
-        {% endif %}
+        {% include "shop/includes/paginator.html" %} 
         </div>
 {% endblock content %}
