--- a/shop/templates/shop/includes/footer.html
+++ b/shop/templates/shop/includes/footer.html
@@ -1,25 +1,26 @@
 {% if title != "Кон нарачка" %}
+{% load static %}
 <footer id="footer">
     <div class="footer-inner">
         <div class="footer-item">
-            <i class="fas fa-truck-moving fa-3x footer-icon"></i>
+            <img src="{% static 'icons/truck.webp' %}" alt="" class="image-icon" width="60" height="60">
             <h3 class="footer-item-title">Најбрза достава до врата</h3>
             <p>За 2-5 работни дена</p>
         </div>
         <div class="footer-item">
-            <i class="fas fa-truck-moving fa-3x footer-icon"></i>
+            <img src="{% static 'icons/people.webp' %}" alt="" class="image-icon" width="60" height="60">
             <h3>Гаранција за замена</h3>
             <p>Во првите 15 дена</p>
         </div>
         <div class="footer-item">
-            <i class="fas fa-truck-moving fa-3x footer-icon"></i>
+            <img src="{% static 'icons/lock-solid.webp' %}" alt="" class="image-icon" width="60" height="60">
             <h3>100% Безбедно плаќање</h3>
             <p>Плати на врата</p>
         </div>
-        <div class="footer-item">
+        <div class="footer-item ">
             <h3>Контакт</h3>
-            <a href="tel:071321312"><i class="fas fa-phone fa-rotate-270"></i>+389 71321312 (09:00 – 17:00)</a>
-            <a href="mailto:contact@greengoshop.mk"><i class="fa fa-envelope"></i>contact@greengoshop.mk</a>
+            <a href="tel:071321312"><img src="{% static 'icons/phone.webp' %}" alt="" class="image-icon top-icon" width="16" height="16">+389 71321312 (09:00 – 17:00)</a>
+            <a href="mailto:contact@greengoshop.mk"><img src="{% static 'icons/envelope.webp' %}" alt="" class="image-icon top-icon" width="16" height="16">contact@greengoshop.mk</a>
         </div>
         <div class="footer-item">
             <h3>Полиси</h3>
@@ -33,8 +34,8 @@
         </div>
     <hr class="horizontal-line">
     <div class="footer-social-icons">
-        <a href="https://www.facebook.com/greengoshop.mk"><i class="fa-brands fa-facebook fa-xl"></i></a>
-        <a href="https://www.instagram.com/greengoshop.mk/"><i class="fa-brands fa-instagram fa-xl"></i></a>
+        <a href="https://www.facebook.com/greengoshop.mk"><img src="{% static 'icons/facebook.webp' %}" alt="" class="image-icon" width="24" height="24"></a>
+        <a href="https://www.instagram.com/greengoshop.mk/"><img src="{% static 'icons/instagram.webp' %}" alt="" class="image-icon" width="24" height="24"></a>
     </div> 
 </div>
 </footer>
