added cart for anonymous users

--- a/shop/templates/shop/product-page.html
+++ b/shop/templates/shop/product-page.html
@@ -178,6 +178,13 @@
         {% endfor %}  
         </ul>
     </section>
+    <img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
+<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
+<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
+<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
+<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
+<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
+<img src="{{ product.thumbnail.url }}" alt="" height="600" width="600">
 </div>
 
 
