--- a/shop/templates/shop/thank-you.html
+++ b/shop/templates/shop/thank-you.html
@@ -22,9 +22,12 @@
         </div>
     </div>
     <div class="thank-you-offer">
+        {% csrf_token %}
         <h3>СПЕЦИЈАЛНА ПОНУДА</h3>
         <h5>Нарачај го истиот производ и заштеди дополнителни 21%</h5>
         <div class="offer-box">
+        <input type="hidden" class="order_id" value="{{ order.id }}">
+        <input type="hidden" class="prod_id" value="{{ offerproduct.product.id }}">
         <img src="{{ offerproduct.product.thumbnail.url }}" alt="" width="250" height="250">
         <p class="offer-ttl">{{ offerproduct.product.title }}</p>
         <p class="rgl_price">{{ offerproduct.product.regular_price }} ден</p>
@@ -63,6 +66,18 @@
             {% endfor %}
             </tbody>
             <tfoot>
+                {% if orderFees %}
+                        {% for fee in orderFees %}
+                        <tr class="cart-fees"> 
+                            <td>
+                                <p>{{ fee.title }}</p>
+                            </td>
+                            <td>
+                                <p>{{ fee.price }} ден</p>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    {% endif %}
                 <tr class="cart-subtotal"> 
                     <td>
                         <p>Цена</p>
